UDP Server functionality implemented. First supported operation is shutdown of the PC.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,14 +28,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.javasysmon-0.3.3.jar=lib/javasysmon-0.3.3.jar
+file.reference.MyCommons.jar=lib/MyCommons.jar
 includes=**
 jar.compress=true
 javac.classpath=\
     ${file.reference.javasysmon-0.3.3.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.MyCommons.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.6
