registry functions as change rdp port added

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.javasysmon-0.3.3.jar=lib/javasysmon-0.3.3.jar
+file.reference.jRegistryKey.jar=lib/jRegistryKey.jar
 file.reference.MyCommons.jar=lib/MyCommons.jar
 includes=**
 jar.compress=true
 javac.classpath=\
     ${file.reference.javasysmon-0.3.3.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.MyCommons.jar}
+    ${file.reference.MyCommons.jar}:\
+    ${file.reference.jRegistryKey.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
