--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,16 +27,12 @@ dist.jar=${dist.dir}/ServerAdmin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.javasysmon-0.3.3.jar=lib/javasysmon-0.3.3.jar
-file.reference.jRegistryKey.jar=lib/jRegistryKey.jar
 file.reference.MyCommons.jar=lib/MyCommons.jar
 includes=**
 jar.compress=true
 javac.classpath=\
-    ${file.reference.javasysmon-0.3.3.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.MyCommons.jar}:\
-    ${file.reference.jRegistryKey.jar}
+    ${file.reference.MyCommons.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
